--- a/ARCHIE_PDFBOX/nbproject/project.properties
+++ b/ARCHIE_PDFBOX/nbproject/project.properties
@@ -59,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=SettingUp.MainClass
+main.class=Project.data.preparation.MainClass
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
